# polars-derive

./: .gitignore  Cargo.toml  README.md
polars-derive-impl/: Cargo.toml
polars-derive-impl/src/: common.rs  from_df.rs  into_df.rs  lib.rs
src/: lib.rs
tests/: convert.rs  simple.rs
