[package]
name = "polars-derive"
version = "0.2.0"
edition = "2021"

[dependencies]
polars = { workspace = true }
polars-derive-impl = { path = "polars-derive-impl" }

[workspace]
members = ["polars-derive-impl"]

[workspace.dependencies]
polars = "0.26.1"

[features]
default = ["dtype-struct"]
dtype-struct = ["polars/dtype-struct"]

[dev-dependencies]
url = "2.3.1"
