[package]
name = "polars-derive"
version = "0.3.0"
edition = "2021"

[dependencies]
polars = { workspace = true }
polars-derive-impl = { path = "polars-derive-impl" }
thiserror = "1.0.38"

[workspace]
members = ["polars-derive-impl"]

[workspace.dependencies]
polars = "0.26.1"

[features]
default = ["dtype-struct"]
dtype-struct = ["polars/dtype-struct"]

[dev-dependencies]
polars = { workspace = true, features = ["parquet"] }
url = "2.3.1"
