[package]
name = "polars-derive-impl"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
polars = { workspace = true }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.49"
quote = "1.0.23"
regex = "1.7.0"
syn = { version = "1.0.107", features = ["parsing", "printing"] }

[features]
default = ["dtype-struct"]
dtype-struct = ["polars/dtype-struct"]
dtype-binary = ["polars/dtype-binary"]
dtype-i8 = ["polars/dtype-i8"]
dtype-u8 = ["polars/dtype-u8"]
dtype-i16 = ["polars/dtype-i16"]
dtype-u16 = ["polars/dtype-u16"]
